--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -40,7 +40,7 @@
     <article>
 
       <div>
-        <h4 class="letterhead thin">March 2016</h4>
+        <h4 class="letterhead thin">June 2016</h4>
         <h2 class="scene-one">Elephant Conservation in Kenya</h2>
         <h5 class="author">Press secretary at Animat Habitat</h5>
       </div>
@@ -70,11 +70,12 @@
       <p class="text-right gutter-side">&lsquo;Ivory set on fire in Nairobi National Park&rsquo;, Kenya, 2016 &copy; AP / Ben Curtis [<a href="../../../url/www/bencurtis/" rel="noopener" target="_blank" title="Ben Curtis">bencurtis.org</a>]</p>
 
       <div>
-        <p>Kenya Wildlife Service (KWS) director general Kitili Mbathi said, &ldquo;We do not believe there is any intrinsic value in ivory, and therefore we are going to burn all our stockpiles and demonstrate to the world that ivory is only valuable on elephants&rdquo;. KWS chairman Richard Leakey hoped the burning of the ivory would encourage African countries to support a ban on ivory trade: &ldquo;We will burn ivory and we hope every country in the globe will support Kenya and say never again should we trade ivory&rdquo;. Kenyatta proclaimed that Kenya will push for the total ban on trade in ivory at the 17th meeting of CITES, to be held in South Africa later this year.</p>
+        <p>Kenya Wildlife Service (KWS) director general Kitili Mbathi stated, &ldquo;We do not believe there is any intrinsic value in ivory, and therefore we are going to burn all our stockpiles and demonstrate to the world that ivory is only valuable on elephants&rdquo;. KWS chair of the board Dr Richard Leakey hoped this act of burning their ivory stockpiles would encourage other African countries to support a ban on ivory trade: &ldquo;We will burn ivory and we hope every country in the globe will support Kenya and say never again should we trade ivory&rdquo;. Kenyatta proclaimed that Kenya will push for the total ban on trade in ivory at the 17th meeting of CITES, to be held in South Africa later this year.</p>
+
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Recognizing that wild fauna and flora in their many beautiful and varied forms are an irreplaceable part of the natural systems of the earth which must be protected for this and the generations to come.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;<em>Convention on International Trade in Endangered Species of Wild Fauna and Flora</em>. (CITES, March 1973) Preamble.</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>Recognizing that wild fauna and flora in their many beautiful and varied forms are an irreplaceable part of the natural systems of the earth which must be protected for this and the generations to come.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Convention on International Trade in Endangered Species of Wild Fauna and Flora (CITES), Preamble, March 1973</font></h4>
       </div>
 
       <div>
@@ -99,18 +100,18 @@
           <div>
             <p>The elephant population in Kenya was estimated at nearly three-hundred thousand at the beginning of the 1970s. Then came the crisis. Herds across Africa were systematically slaughtered to supply international ivory markets. By the end of the 1980s, there were less than twenty thousand elephants in Kenya.</p>
 
-            <p class="linebreak">In April 1989, the President of Kenya, Daniel arap Moi, appointed Kenyan conservationist and world-renowned paleoanthropologist Richard Leakey as head of the Wildlife Conservation and Management Department&mdash;the department that was later replaced by <u>Kenya Wildlife Service</u>. Leakey became its first chairman. Within months of his appointment, backed by political support, Leakey effectively quelled corruption at the department and established well-equipped anti-poaching units in the parks.</p>
+            <p class="linebreak">In April 1989, the President of Kenya, Daniel arap Moi, appointed Kenyan paleoanthropologist Dr Richard Leakey as head of the Wildlife Conservation and Management Department&mdash;the department that was later replaced by <u>Kenya Wildlife Service</u>. Leakey chaired its first board of trustees. Within months of his appointment, backed by political support, Leakey effectively quelled corruption at the department and established well-equipped anti-poaching units in the parks.</p>
 
-            <p class="linebreak">Then, in July of that year, Leakey and then President Moi set fire to twelve tons of tusks&mdash;a stockpile of ivory valued at millions of US dollars. This was a message to the world to end the slaughter. CITES resolved to ban trade in ivory. Ivory industries withered, or went underground. Then the poaching crisis was under control, and elephant populations in Kenya began to rebound.</p>
+            <p class="linebreak">Then, in July of that year, Leakey and then President Moi set fire to twelve tons of tusks&mdash;a stockpile of ivory valued at millions of US dollars. This was a message to the world to end the slaughter. Just months later, in October 1989, at the seventh Conference of the Parties in Lausanne, Switzerland, CITES resolved to ban trade in ivory. Then ivory industries around the world withered, or went underground. The poaching crisis was under control, and elephant populations in Kenya began to rebound.</p>
 
-            <p class="linebreak">Until 2008&hellip; CITES authorized a one-off sale of ivory stockpiles from four Southern African countries to China and Japan. Ivory markets, all of a sudden legal, resurfaced in those Asian countries and a demand for ivory was renewed. Poaching for ivory once again ramped up across Africa, with elephants in Kenya swept up in the slaughter.</p>
+            <p class="linebreak">Until 2008&hellip; CITES authorized a one-off sale of ivory stockpiles from four Southern African countries to China and Japan. Ivory markets, all of a sudden legitimized, resurfaced in those Asian countries and a demand for ivory was renewed. Poaching for ivory once again ramped up across Africa, with elephants in Kenya swept up in the slaughter.</p>
 
-            <p class="linebreak">Despite the devastation, Kenyan conservationist Dr Paula Kahumbu, who was first mentored by Richard Leakey, held faith in Kenya&mdash;in its civil society and freedom of the press, in its political support for conservation from incoming President Uhuru Kenyatta, and in its recent history of elephant conservation success in the 1990s. And according to the IUCN African elephant database, the elephant population in Kenya is now near thirty-thousand and relatively stable, especially relative to other African countries.</p>
+            <p class="linebreak">Despite the devastation, and not withstanding any good or bad direction of KWS taken by her mentor Dr Richard Leakey, Kenyan conservationist Dr Paula Kahumbu held faith in Kenya&mdash;in its civil society and freedom of the press, in its political support for conservation from incoming President Uhuru Kenyatta, and in its recent history of elephant conservation success in the 1990s. According to the IUCN African elephant database, the elephant population in Kenya is now near thirty-thousand and is relatively stable, especially relative to other African countries.</p>
 
-            <div class="clear-bottom">
+            <!-- <div class="clear-bottom">
               <p><b class="color">&ldquo;</b>Earlier, a hundred thousand elephants lived in Kenya and we didn’t have a noteworthy problem with it. The problem that we have today is not that there are more elephants.<b class="color">&rdquo;</b><font class="color">&nbsp;&mdash; Dr Richard Leakey</font></p>
 
-            </div>
+            </div> -->
 
             <p class="linebreak">Close history: <a class="color overscore" onclick="toggle_nairobi_1989();">1989 Ivory Burn, Nairobi</a><sup>&nbsp;[<a class="button" onclick="fn();" title="Footnotes">3,4</a>]</sup></p>
 
@@ -133,6 +134,9 @@
           <p class="small"><sup>2</sup> <em>Africa</em>, &lsquo;Kenyan ivory burnt by President Uhuru Kenyatta&rsquo;, 3 March 2015. BBC News. <a href="../../../url/www/bbc-world-africa-kenyan-ivory-burnt/" title="BBC News / Kenyan ivory burnt by President Uhuru Kenyata" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>3</sup> Perlez, J. &lsquo;Can he save the elephants?&rsquo;, 7 January 1990. New York Times. <a href="../../../url/www/nytimes-can-he-save-the-elephants/" title="New York Times / Magazine / Can he save the elephants?" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>4</sup> Lander, J. <em>Paula Kahumbu: Out of Africa</em>, &lsquo;Saving Africa’s elephants from poachers is the driving passion for a daughter of Kenya.&rsquo;, 12 November 2014. Princeton Alumni Weekly. <a href="../../../url/-edu/princeton-paw-paula-kahumbu-out-of-africa/" title="Princeton Alumni Weekly / Paula Kahumbu: Out of Africa" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+
+          <!-- IUCN African elephant database -->
+          <!-- https://portals.iucn.org/library/sites/library/files/documents/SSC-OP-060_A.pdf -->
 
           <!-- https://apnews.com/article/50525519e0654e7e859d3cace7a5c829 -->
 
@@ -199,7 +203,7 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">A History of Elephant Conservation /</font></a>
+          <a class="nav-previous" href="../making-of-ella-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch.&nbsp;2 /</font></a>
           <a class="nav-next" href="../book-of-ella-3/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Book of Ella Ch.&nbsp;3</font></a>
         </div>
       </div>
@@ -209,7 +213,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2016 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
+      <p class="small">This article was edited March 2023.</p>
+
+      <p class="linebreak small">Copyright &copy; 2016-2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
