--- a/scene/one/elephant-conservation/index.html
+++ b/scene/one/elephant-conservation/index.html
@@ -293,7 +293,7 @@
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../book-of-ella-2-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Book of Ella Ch.&nbsp;2 &ndash; P.&nbsp;2 /</font></a>
-          <a class="nav-next" href="../elephant-conservation-kenya/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Elephant Conservation in Kenya</font></a>
+          <a class="nav-next" href="../making-of-ella-2/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Making of Ella Ch.&nbsp;2</font></a>
         </div>
       </div>
 
@@ -302,7 +302,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2015 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
+      <p class="small">This article was edited March 2023.</p>
+
+      <p class="linebreak small">Copyright &copy; 2015-2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
