--- a/scene/one/book-of-ella-3/index.html
+++ b/scene/one/book-of-ella-3/index.html
@@ -37,7 +37,7 @@
   <section>
     <article>
       <div>
-        <h4 class="letterhead thin">June 2016</h4>
+        <h4 class="letterhead thin">December 2016</h4>
         <h2 class="scene-one">Book of Ella Ch.&nbsp;3: Color</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat</h5>
 
@@ -166,7 +166,7 @@
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-kenya/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Elephant Conservation in Kenya /</font></a>
-          <a class="nav-next" href="../making-of-ella-2/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Making of Ella Ch.&nbsp;2</font></a>
+          <a class="nav-next" href="../making-of-ella-3/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Making of Ella Ch.&nbsp;3</font></a>
         </div>
       </div>
 
@@ -175,8 +175,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">This article was edited September 2019.</p>
-      <p class="linebreak small">Copyright &copy; 2016 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
+      <p class="small">This article was edited September 2019 and again March 2023.</p>
+
+      <p class="linebreak small">Copyright &copy; 2016-2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
