--- a/scene/one/book-of-ella/index.html
+++ b/scene/one/book-of-ella/index.html
@@ -74,7 +74,7 @@
 
         <p class="linebreak">The cover art for the <em>White Elephant</em> companion app is designed in part to distance itself from the clarity that comes with the line-art and vector graphics that saturate the world of icons and logos and so on. The visual development of the cover art is drawn instead from the texture that appears in the pages of the <em>White Elephant</em> comic book. The image of a sand-covered and partially dissolved silhouette of an elephant distances itself from a corporate interpretation, and moves closer to a graphic abstraction of the plight of elephants in the wild. This cover image better represents the strength and wisdom that is faded, year after year, lost with the tens of thousands of elephants killed for their tusks.</p>
 
-        <p class="linebreak">In a book of photographs of the life cycle of elephants: <em>Remembering Elephants</em> (2016) by Margot Raggett, in the foreword written by Virginia McKenna OBE, founder of Born Free Foundation, the tragedy of the ivory trade is put simply: &ldquo;The life of all elephants simply must have more significance than a small sad fragment of carved tusk on someone's mantelpiece.&rdquo;</p>
+        <p class="linebreak">In a book of photographs of the life cycle of elephants: <em>Remembering Elephants</em> (2016) by Margot Raggett, in the foreword written by Virginia McKenna OBE, co-founder of Born Free Foundation, the tragedy of the ivory trade is put simply: &ldquo;The life of all elephants simply must have more significance than a small sad fragment of carved tusk on someone's mantelpiece.&rdquo;</p>
 
         <p class="linebreak">The goal of the app and the art of <em>White Elephant</em> is simply to share this message: <em>No one in the world needs an elephant tusk other than an elephant.</em></p>
 
@@ -148,7 +148,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2015 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
+      <p class="small">This article was edited March 2023.</p>
+
+      <p class="linebreak small">Copyright &copy; 2015-2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
