--- a/scene/one/elephant-history/index.html
+++ b/scene/one/elephant-history/index.html
@@ -201,8 +201,9 @@
 
   <footer>
     <div class="quote">
-      <p class="linebreak small">This article was edited September 2018.</p>
-      <p class="small">Copyright &copy; 2017 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
+      <p class="small">This article was edited September 2018 and again March 2023.</p>
+
+      <p class="linebreak small">Copyright &copy; 2017-2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
