--- a/scene/one/making-of-ella-3/index.html
+++ b/scene/one/making-of-ella-3/index.html
@@ -120,7 +120,7 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../making-of-ella-2/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch.&nbsp;2 /</font></a>
+          <a class="nav-previous" href="../book-of-ella-3/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Book of Ella Ch.&nbsp;3 /</font></a>
           <a class="nav-next" href="../elephant-history/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ A History of Elephants &ndash; Preface</font></a>
         </div>
       </div>
@@ -130,7 +130,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2017 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'acc&egrave;s.</font></p>
+      <p class="small">This article was edited September 2023.</p>
+
+      <p class="linebreak small">Copyright &copy; 2017-2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
