--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -108,10 +108,10 @@
 
             <p class="linebreak">Despite the devastation, and not withstanding any good or bad direction of KWS taken by her mentor Dr Richard Leakey, Kenyan conservationist Dr Paula Kahumbu held faith in Kenya&mdash;in its civil society and freedom of the press, in its political support for conservation from incoming President Uhuru Kenyatta, and in its recent history of elephant conservation success in the 1990s. According to the IUCN African elephant database, the elephant population in Kenya is now near thirty-thousand and is relatively stable, especially relative to other African countries.</p>
 
-            <!-- <div class="clear-bottom">
-              <p><b class="color">&ldquo;</b>Earlier, a hundred thousand elephants lived in Kenya and we didn’t have a noteworthy problem with it. The problem that we have today is not that there are more elephants.<b class="color">&rdquo;</b><font class="color">&nbsp;&mdash; Dr Richard Leakey</font></p>
+            <div class="clear-bottom">
+              <p><b class="color">&ldquo;</b>Earlier, a hundred thousand elephants lived in Kenya and we did not have a noteworthy problem with it. The problem that we have today is not that there are more elephants.<b class="color">&rdquo;</b><font class="color">&nbsp;&mdash; Dr Richard Leakey</font></p>
 
-            </div> -->
+            </div>
 
             <p class="linebreak">Close history: <a class="color overscore" onclick="toggle_nairobi_1989();">1989 Ivory Burn, Nairobi</a><sup>&nbsp;[<a class="button" onclick="fn();" title="Footnotes">3,4</a>]</sup></p>
 
@@ -130,15 +130,12 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Zane, D. <em>Africa</em>, &lsquo;Kenya's ivory inferno: Does burning elephant tusks destroy them?&rsquo;, 29 April 2016. BBC News. <a href="../../../url/www/bbc-world-africa-kenyas-ivory-inferno/" title="BBC News / Kenya's ivory inferno" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup> Nuwer, R. <em>Wildlife Watch</em>, &lsquo;Kenya Sets Ablaze 105 Tons of Ivory&rsquo;, 30 April 2016. National Geographic. <a href="../../../url/www/nationalgeographic-kenya-record-breaking-ivory-burn/" title="National Geographic / Kenya Sets Ablaze 105 Tons of Ivory" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>2</sup> <em>Africa</em>, &lsquo;Kenyan ivory burnt by President Uhuru Kenyatta&rsquo;, 3 March 2015. BBC News. <a href="../../../url/www/bbc-world-africa-kenyan-ivory-burnt/" title="BBC News / Kenyan ivory burnt by President Uhuru Kenyata" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>3</sup> Perlez, J. &lsquo;Can he save the elephants?&rsquo;, 7 January 1990. New York Times. <a href="../../../url/www/nytimes-can-he-save-the-elephants/" title="New York Times / Magazine / Can he save the elephants?" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>4</sup> Lander, J. <em>Paula Kahumbu: Out of Africa</em>, &lsquo;Saving Africa’s elephants from poachers is the driving passion for a daughter of Kenya.&rsquo;, 12 November 2014. Princeton Alumni Weekly. <a href="../../../url/-edu/princeton-paw-paula-kahumbu-out-of-africa/" title="Princeton Alumni Weekly / Paula Kahumbu: Out of Africa" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
-          <!-- IUCN African elephant database -->
-          <!-- https://portals.iucn.org/library/sites/library/files/documents/SSC-OP-060_A.pdf -->
-
-          <!-- https://apnews.com/article/50525519e0654e7e859d3cace7a5c829 -->
+          <!-- <p class="small"><sup>1</sup> Zane, D. <em>Africa</em>, &lsquo;Kenya's ivory inferno: Does burning elephant tusks destroy them?&rsquo;, 29 April 2016. BBC News. <a href="../../../url/www/bbc-world-africa-kenyas-ivory-inferno/" title="BBC News / Kenya's ivory inferno" target="_blank" rel="noopener">Website&nbsp;Link</a></p> -->
 
         </div>
       </div>
