--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -39,7 +39,7 @@
   <section>
     <article>
       <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~sheldrick-wildlife-trust/swt.orphans-line.1.jpg" />
-      <p class="text-right gutter-side">&ldquo;Orphans line.&rdquo; Nairobi Nursery, 2019 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
+      <p class="text-right gutter-side">&ldquo;Orphans line.&rdquo; Nairobi Nursery, 2019 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>, cropped]</p>
 
       <div>
         <h4 class="letterhead thin">March 2019</h4>
